started syscalls and organized

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "files.associations": {
         "jacklib.h": "c",
-        "calls.h": "c"
+        "calls.h": "c",
+        "stdbool.h": "c",
+        "memory.h": "c",
+        "jmemory.h": "c",
+        "schedule.h": "c",
+        "global.h": "c"
     }
 }
