--- a/Kernel/Memory/src/Makefile
+++ b/Kernel/Memory/src/Makefile
@@ -1,10 +1,11 @@
 CC=gcc
 
 SRC_DIR_CPU = /home/jack/Desktop/Jack-OS/CPU/src
+SRC_DIR_SCHEDULE = /home/jack/Desktop/Jack-OS/Kernel/Scheduling
 
-CFLAGS = -I. -I${SRC_DIR_CPU} -I${SRC_DIR_CPU}/instructions -g
+CFLAGS = -I. -I${SRC_DIR_CPU} -I${SRC_DIR_CPU}/instructions -I${SRC_DIR_SCHEDULE} -g
 
-SRCS = memory.c  ${SRC_DIR_CPU}/cpu.c ${SRC_DIR_CPU}/instructions/instructions.c
+SRCS = jmemory.c  ${SRC_DIR_CPU}/cpu.c ${SRC_DIR_CPU}/instructions/instructions.c ${SRC_DIR_SCHEDULE}/schedule.c
 
 EXEC=mem
 
