programs can take input via read sys_call

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "memory.h": "c",
         "jmemory.h": "c",
         "schedule.h": "c",
-        "global.h": "c"
+        "global.h": "c",
+        "cpu.h": "c",
+        "instructions.h": "c"
     }
 }
