Need to fix dependencies

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "schedule.h": "c",
         "global.h": "c",
         "cpu.h": "c",
-        "instructions.h": "c"
+        "instructions.h": "c",
+        "kernel.h": "c"
     }
 }
