--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,10 @@
         "global.h": "c",
         "cpu.h": "c",
         "instructions.h": "c",
-        "kernel.h": "c"
+        "kernel.h": "c",
+        "signal.h": "c",
+        "stdio.h": "c",
+        "string.h": "c",
+        "stdlib.h": "c"
     }
 }
