--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,9 @@
         "stdio.h": "c",
         "string.h": "c",
         "stdlib.h": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "j_threads.h": "c",
+        "pthread.h": "c",
+        "j_shell.h": "c"
     }
 }
